2012-03-07  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php: Added custom
	seconds control to custom graph editor

2012-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/functions_flot.php
	include/graphs/flot/pandora.flot.js
	include/graphs/fgraph.php
	include/pchart_graph.php
	include/FusionCharts
	include/pChart
	include/functions_ui.php
	images/chart_curve_threshold.png: Clean graphs code 
	and add threshold (warning and critical min)

	* operation/reporting/reporting_viewer.php
	include/functions_reporting.php: Improve the top_n
	merged from 4.0


2012-03-05 Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console/include/graphs/functions_flot.php: added the function
	"include_javascript_dependencies_flot_graph" for to do more carefuly the
	include javascripts and javascript hardcore wrote code (once time) and added
	call into all functions this function. And into the function
	"flot_hcolumn_chart " fixed the init var $return. And removed hack to use
	two versions of jquery.
	
	* pandora_console/include/graphs/flot/pandora.flot.js: removed the hack to
	use two versions of jquery.
	
	* pandora_console/include/functions_ui.php: into the function
	"ui_process_page_head" call the "include_javascript_dependencies_flot_graph"
	it is enabled the flash_chart in $config.
	
	* pandora_console/include/graphs/fgraph.php,
	pandora_console/include/include_graph_dependencies.php: removed old
	include for old flash chart library.

2012-03-05 Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/update_manager/main.php, general/shortcut_bar.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.preview.php, include/functions_api.php,
	include/functions_html.php, include/htmlawed.php, include/pchart_graph.php,