@@ -1,3 +1,11 @@
+2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* include/graphs/functions_gd.php: fixed into the function
+	"gd_progress_bubble" when the $progress is upper to 100% or lower 0% show
+	the image "out of limits".
+	
+	Merge from the branch "pandora_4.0"
+
 2012-03-07  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/reporting/graph_builder.main.php: Added custom
